tests/paczka1/small_fuzzy/26084979.err
Error in line 1: z4BRkWRtBR S930 54,5
Error in line 7: csXKva6k S151 48,8
